--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 
   
   <!-- Configured Head Tags  -->
-  <link rel="apple-touch-icon" sizes="57x57" href="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/icon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/icon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/icon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/icon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/icon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/icon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/icon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/icon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/icon/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/icon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/icon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/icon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/icon/favicon-16x16.png">
-	<link rel="manifest" href="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/manifest.json">
+  <link rel="apple-touch-icon" sizes="57x57" href="/assets/icon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/assets/icon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/assets/icon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/assets/icon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/assets/icon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/assets/icon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/assets/icon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/assets/icon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="/assets/icon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/assets/icon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
+	<link rel="manifest" href="/assets/manifest.json">
 	<meta name="msapplication-TileColor" content="#00bcd4">
-	<meta name="msapplication-TileImage" content="/home/pjpena/Documentos/join/joinble.github.io/assets/assets/icon/ms-icon-144x144.png">
+	<meta name="msapplication-TileImage" content="/assets/icon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#00bcd4">
   
 
@@ -35,7 +35,7 @@
   <base href="/">
 
 
-<link href="/home/pjpena/Documentos/join/joinble.github.io/assets/main.983f6bb44303611d5813959dbf800a9f.css" rel="stylesheet"><script src="/home/pjpena/Documentos/join/joinble.github.io/assets/polyfills.71933b41b4bb68231e21.bundle.js" type="text/javascript" defer></script><script src="/home/pjpena/Documentos/join/joinble.github.io/assets/vendor.c02ca41059b7abf1790a.bundle.js" type="text/javascript" defer></script><script src="/home/pjpena/Documentos/join/joinble.github.io/assets/main.72d4245c1f690e8ed322.bundle.js" type="text/javascript" defer></script></head>
+<link href="main.983f6bb44303611d5813959dbf800a9f.css" rel="stylesheet"><script src="polyfills.54ac1e4262f9015c8b00.bundle.js" type="text/javascript" defer></script><script src="vendor.c02ca41059b7abf1790a.bundle.js" type="text/javascript" defer></script><script src="main.72d4245c1f690e8ed322.bundle.js" type="text/javascript" defer></script></head>
 
 <body>
 
