--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="/assets/icon/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
 	<link rel="manifest" href="/assets/manifest.json">
-	<meta name="msapplication-TileColor" content="#00bcd4">
+	<meta name="msapplication-TileColor" content="#111112">
 	<meta name="msapplication-TileImage" content="/assets/icon/ms-icon-144x144.png">
-	<meta name="theme-color" content="#00bcd4">
+	<meta name="theme-color" content="#111112">
   
 
   <!-- base url -->
   <base href="/">
 
 
-<link href="main.983f6bb44303611d5813959dbf800a9f.css" rel="stylesheet"><script src="polyfills.54ac1e4262f9015c8b00.bundle.js" type="text/javascript" defer></script><script src="vendor.c02ca41059b7abf1790a.bundle.js" type="text/javascript" defer></script><script src="main.72d4245c1f690e8ed322.bundle.js" type="text/javascript" defer></script></head>
+<link href="main.74f497ba8f52be2fb6ca0401e9a3e46a.css" rel="stylesheet"><script src="polyfills.54ac1e4262f9015c8b00.bundle.js" type="text/javascript" defer></script><script src="vendor.c02ca41059b7abf1790a.bundle.js" type="text/javascript" defer></script><script src="main.72d4245c1f690e8ed322.bundle.js" type="text/javascript" defer></script></head>
 
 <body>
 
